Fixed input on Firefox

--- a/web/app/public/css/styles.css
+++ b/web/app/public/css/styles.css
@@ -7214,7 +7214,8 @@ class
     text-align: center;
     border: 0;
     font-size: 30px;
-    padding: 30px; }
+    padding: 10px;
+    height: auto; }
   .login .naughty-nice {
     padding: 20px 0; }
     .login .naughty-nice .subtitle {
