--- a/web/app/public/sass/login.scss
+++ b/web/app/public/sass/login.scss
@@ -269,7 +269,8 @@ $novacento: 'Novecentosanswide-Light', 'Helvetica Neue', sans-serif;
         text-align: center;
         border: 0;
         font-size: 30px;
-        padding: 30px;
+        padding: 10px;
+        height: auto;
     }
 
     .naughty-nice {
